fix missing xmlns in html

--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,10 @@
 
     <div class="scene">
         <div class="tetragon">
-            <svg class="tetragon__surface tetragon__surface--bottom"><use xlink:href="#polygon"></use></svg>
-            <svg class="tetragon__surface tetragon__surface--front"><use xlink:href="#polygon"></use></svg>
-            <svg class="tetragon__surface tetragon__surface--left"><use xlink:href="#polygon"></use></svg>
-            <svg class="tetragon__surface tetragon__surface--right"><use xlink:href="#polygon"></use></svg>
+            <svg class="tetragon__surface tetragon__surface--bottom" xmlns:xlink="http://www.w3.org/1999/xlink"><use xlink:href="#polygon"></use></svg>
+            <svg class="tetragon__surface tetragon__surface--front" xmlns:xlink="http://www.w3.org/1999/xlink"><use xlink:href="#polygon"></use></svg>
+            <svg class="tetragon__surface tetragon__surface--left" xmlns:xlink="http://www.w3.org/1999/xlink"><use xlink:href="#polygon"></use></svg>
+            <svg class="tetragon__surface tetragon__surface--right" xmlns:xlink="http://www.w3.org/1999/xlink"><use xlink:href="#polygon"></use></svg>
         </div>
     </div>
 
