add chrome theme-color

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <title>Tedra</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <meta name="theme-color" content="#0a0b0e">
     <link type="text/css" rel="stylesheet" href="scss/index.scss" />
     <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Overpass:300,900">
     <link type="preload" as="image" href="img/smiley.svg" />
