fix instagram link

--- a/src/index.html
+++ b/src/index.html
@@ -125,7 +125,7 @@
                         <a class="list-item__link" target="_blank" href="https://www.facebook.com/Tedraofficial">Facebook</a>
                     </li>
                     <li class="list-item">
-                        <a class="list-item__link" target="_blank" href="https://instagram.com/officialtedra">Instagram</a>
+                        <a class="list-item__link" target="_blank" href="https://www.instagram.com/tedra.tech/">Instagram</a>
                     </li>
                     <li class="list-item">
                         <a class="list-item__link" target="_blank" href="https://soundcloud.com/tedraofficial">SoundCloud</a>
