serve font from our server

--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <meta name="theme-color" content="#0a0b0e">
     <link type="text/css" rel="stylesheet" href="scss/index.scss" />
-    <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Overpass:300,900">
+    <script type="text/javascript" src="ts/index.ts" async></script>
     <link type="preload" as="image" href="img/smiley.svg" />
     <link type="preload" as="image" href="img/logo.png" />
+    <link type="preload" as="font" href="font/overpass/overpass-extralight.woff2" crossorigin="anonymous"/>
+    <link type="preload" as="font" href="font/overpass/overpass-heavy.woff2" crossorigin="anonymous"/>
 </head>
 
 <body>
@@ -153,7 +155,5 @@
             <polygon points="6,690.82032 794,690.82032 400,6" stroke-width="8"></polygon>
         </symbol>
     </svg>
-
-    <script type="text/javascript" src="ts/index.ts" async></script>
 </body>
 </html>
